# so_arm101_star_tracker

./: .dockerignore  CLAUDE.md  Dockerfile  Dockerfile.fast  README.md  aim_polaris.py  calibrate_imu_axes.py  docker-compose.yml  docker_build.sh  docker_exec.sh  docker_run.sh  goto.py  goto_ble.py  requirements.txt
.github/hooks/: context-mode.json
goto/: __init__.py  ble_protocol.py  ble_server.py  celestial.py  config.py  image_server.py  imu.py  live_camera.py  media.py  network.py  scheduler.py  servos.py  session.py  strategy.py  tracker.py
poses/: pitch_cal.json  tracking.json
speckle/: __init__.py  capture.py  config.py  pipeline.py  processing.py  reconstruction.py  storage.py
src/: servo_scan.cpp
src/so_arm_description/urdf/: so101_novis.urdf
src/star_tracker/: CMakeLists.txt  README.md  TESTING.md  calibrate_coordinate_transform.py  calibrate_imu_pointing.py  manual_calibration.py  package.xml  test_auto_calibration.py  test_bno055_direct.py  test_bno055_ros.py  test_imu_range.py  test_imu_simple.py  test_imu_tracking.py  test_imu_verification.py  test_shoulder_only.py  validation_results.json
src/star_tracker/config/: imu_calibration.yaml
src/star_tracker/launch/: star_tracker.launch.py  star_tracker_gps.launch.py  star_tracker_imu.launch.py  test_star_tracker.launch.py  test_toronto_moon.launch.py
src/star_tracker/star_tracker/: __init__.py  alignment_calibration.py  arm_emulator.py  auto_calibration.py  bno055_interface.py  coordinate_transform.py  gps_interface.py  gps_provider.py  imu_provider.py  imu_transform.py  integration_tests.py  mock_providers.py  star_tracker_node.py  test_astropy_validation.py  test_framework.py  validate_ros2.py  validate_tests.py
systemd/: star-tracker-ble.service
webapp/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
webapp/src/: App.tsx  ble.ts  media.ts  protocol.ts  sky.ts  styles.css
webapp/src/components/: CalibrationPanel.tsx  ConfigPanel.tsx  ConnectionPanel.tsx  SkyMap.tsx  (+8 more)
